Bug 1731049 - fix copy/move behaviour for remote paths on Win10 when copying without buffering returns errors, r=masayuki a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D129973